# EZ_Image_Manipulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
include/: CropRectItem.hpp  CropTool.hpp  ImageEditor.hpp  ImageTool.hpp  OpenSaveTool.hpp  ResizeTool.hpp  RotateFlipTool.hpp  WebPHandler.hpp  ZoomTool.hpp
src/: CropRectItem.cpp  CropTool.cpp  ImageEditor.cpp  OpenSaveTool.cpp  ResizeTool.cpp  RotateFlipTool.cpp  WebPHandler.cpp  ZoomTool.cpp  main.cpp
